<resources>

    <string name="todo_app">ToDo</string>
    <string name="app_name">ToDoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_about_us">About Us</string>
    <string name="nothing"> Nothing </string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="to_do_login">To Do</string>
    <string name="sign_in_login">Sign in</string>
    <string name="sign_up_login">Sign up</string>
    <string name="username_register">Username</string>
    <string name="password_register">Password</string>
    <string name="confirm_password_register">Confirm Password</string>
    <string name="to_do_register">To Do</string>
    <string name="register_register">Register</string>
    <string name="cancel_register">Cancel</string>
    <string name="share_tab">Share</string>
    <string name="create_new_todo_atask">Create new ToDo</string>
    <string name="add_title_atask">Add Title</string>
    <string name="what_you_do_atask">What You Do?</string>
    <string name="description_atask">Description</string>
    <string name="how_to_atask">How to?</string>
    <string name="timeline_atask">Timeline</string>
    <string name="when_will_atask">When will?</string>
    <string name="create_now_atask">Create Now</string>
    <string name="cancel_atask">Cancel</string>
    <string name="edit_todo_etask">Edit ToDo</string>
    <string name="add_title_etask">Add Title</string>
    <string name="what_you_do_etask">What You Do?</string>
    <string name="description_etask">Description</string>
    <string name="how_to_etask">How to?</string>
    <string name="timeline_etask">Timeline</string>
    <string name="when_will_etask">When will?</string>
    <string name="save_update_etask">Save Update</string>
    <string name="delete_etask">Delete</string>
    <string name="title_todo_item">Title ToDo</string>
    <string name="description_todo_item">Description ToDo</string>
    <string name="date_todo_item">Date ToDo</string>
    <string name="map_nav">Map</string>
    <string name="rate_this_app_nav">Rate this app</string>

    <!--    SharedPreferences-->
    <string name="checkbox">com.fiek.todoapp.checkbox</string>
    <string name="username">com.fiek.todoapp.username</string>
    <string name="password">com.fiek.todoapp.password</string>

    <!--    Rate This app-->
    <string name="action_settings">Settings</string>
    <string name="rate_app_title">Rate our App</string>
    <string name="rate_app_message">If you like our app, please take a moment to rate it in play store!</string>
    <string name="dialog_app_rate">Rate App</string>
    <string name="dialog_ask_later">Later</string>
    <string name="dialog_your_feedback">Your Feedback</string>
    <string name="app_message">Launch count is %d</string>


    <string name="home">Home</string>

    <string-array name="nav_item_activity_titles">
        <item> </item>
        <item>Contacts</item>
        <item>Map</item>
        <item>Rate this app</item>
    </string-array>

    <string name="google_map_api">AIzaSyDiieB5dYR2HdadJTbTaQmV0fC-vyBDKoM</string>
    <string name="notify_atask">Notify</string>
    <string name="notify_etask">Notify</string>
    <string name="email_login">Email</string>
    <string name="email_register">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_nav">Contacts</string>
    <string name="remember_call">Remember Call</string>


</resources>