<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#F4F4F4">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearlayoutTodoBack"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/todo"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/titlepage"
            android:layout_marginTop="122dp"
            android:textSize="25sp"
            android:textColor="#7689DA"
            android:text="@string/edit_todo_etask"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/additems"
        app:layout_constraintTop_toBottomOf="@+id/snackbar"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="22dp"
        android:paddingTop="22dp"
        android:background="@drawable/bgitemtodo">

        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addtitle"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/add_title_etask"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/titletodo"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/what_you_do_etask"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bginputaddtask"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/adddesc"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/description_etask"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/desctodo"
                android:inputType="text"
                android:background="@drawable/bginputaddtask"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:maxLength="25"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/how_to_etask"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/adddate"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/timeline_etask"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/datetodo"
                android:inputType="text"
                android:background="@drawable/bginputaddtask"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/when_will_etask"
                android:layout_width="match_parent"
                android:layout_height="55dp" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnSaveUpdate"
        app:layout_constraintTop_toBottomOf="@+id/additems"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/save_update_etask"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btncreate_at"/>

    <Button
        app:layout_constraintTop_toBottomOf="@+id/btnSaveUpdate"
        android:id="@+id/btnDelete"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/delete_etask"
        android:textColor="#AFAFAF"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btncancel_at"/>

</androidx.constraintlayout.widget.ConstraintLayout>