<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background_animation_login"
    android:id="@+id/signupbackground"
    android:alpha="0.8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/d_40dp"
            android:layout_marginRight="@dimen/d_40dp">

            <EditText
                android:id="@+id/edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/username_register"
                android:imeOptions="actionNext"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edittext_username"
                android:layout_marginTop="@dimen/d_30dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password_register"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp" />
            <EditText
                android:id="@+id/edittext_cnf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edittext_password"
                android:layout_marginTop="@dimen/d_30dp"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:hint="@string/confirm_password_register"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="17sp" />


        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/d_80dp"
            android:text="@string/to_do_register"
            android:textColor="@color/colorWhite"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="25sp"/>


        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_cancel"
            android:layout_marginBottom="@dimen/d_10dp"
            android:layout_marginLeft="@dimen/d_20dp"
            android:layout_marginRight="@dimen/d_20dp"
            android:text="@string/register_register"
            android:background="@drawable/button_white"
            android:textColor="#48F3BE" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/d_20dp"
            android:layout_marginLeft="@dimen/d_20dp"
            android:layout_marginRight="@dimen/d_20dp"
            android:text="@string/cancel_register"
            android:background="@drawable/button_v"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>