<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bgitemtodo"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/d_20dp"
    android:layout_height="@dimen/d_100dp"
     >

    <LinearLayout
        android:layout_marginLeft="@dimen/d_16dp"
        android:orientation="vertical"
        android:padding="@dimen/d_10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titletodo"
            android:layout_marginTop="@dimen/d_10dp"
            android:textSize="22sp"
            android:text="@string/title_todo_item"
            android:textColor="#000C5D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/desctodo"
            android:textSize="18sp"
            android:textColor="#ADADAD"
            android:text="@string/description_todo_item"
            android:layout_marginTop="@dimen/d_8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/d_30dp"
        android:layout_marginRight="@dimen/d_15dp"
        android:padding="@dimen/d_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/datetodo"
            android:textSize="18sp"
            android:textColor="#F63EA5"
            android:text="@string/date_todo_item"
            android:layout_marginTop="@dimen/d_8dp"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>